@@ -27,7 +27,7 @@
 ## end license ##
 
 from os.path import abspath, dirname                #DO_NOT_DISTRIBUTE
-from os import system, getcwd                       #DO_NOT_DISTRIBUTE
+from os import system                               #DO_NOT_DISTRIBUTE
 from glob import glob                               #DO_NOT_DISTRIBUTE
 from sys import path as systemPath, exit            #DO_NOT_DISTRIBUTE
 from subprocess import Popen                        #DO_NOT_DISTRIBUTE
@@ -37,11 +37,10 @@ for path in glob(parentdir+'/deps.d/*'):            #DO_NOT_DISTRIBUTE
     systemPath.insert(0, path)                      #DO_NOT_DISTRIBUTE
 systemPath.insert(0, parentdir)                     #DO_NOT_DISTRIBUTE
 
-from sys import argv, exit
+from sys import argv
 from os import listdir
 from os.path import join
 from optparse import OptionParser, Option
-from subprocess import Popen
 
 from meresco.solr.server import Server, usrShareDir
 
