@@ -3,6 +3,6 @@
  
 <Configure class="org.eclipse.jetty.webapp.WebAppContext">
   <Set name="contextPath">/solr</Set>
-  <Set name="war">/usr/share/java/webapps/apache-solr-4.0.0.war</Set>
+  <Set name="war">/usr/share/java/webapps/solr-4.5.1.war</Set>
 </Configure>
 
