@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <solr sharedLib="lib" persistent="true">
-    <cores adminPath="/admin/cores"/>
+	<cores adminPath="/admin/cores">
+	</cores>
 </solr>
