@@ -5,11 +5,11 @@
 # Each line contains entry in the format:
 #
 #  SUBJECT [ [!] CONDITION [AND|OR] ]*
-# 
-# where SUBJECT: 
+#
+# where SUBJECT:
 #   ends with ".class" is the Main class to run.
 #   ends with ".xml" is a configuration file for the command line
-#   ends with "/" is a directory from which to add all jar and zip files. 
+#   ends with "/" is a directory from which to add all jar and zip files.
 #   ends with "/*" is a directory from which to add all unconsidered jar and zip files.
 #   ends with "/**" is a directory from which to recursively add all unconsidered jar and zip files.
 #   Containing = are used to assign system properties.
@@ -18,7 +18,7 @@
 #   all other subjects are treated as files to be added to the classpath.
 #
 # ${name} is expanded to a start property
-# $(name) is expanded to either a start property or a system property. 
+# $(name) is expanded to either a start property or a system property.
 # The start property ${version} is defined as the version of the start.jar
 #
 # Files starting with "/" are considered absolute, all others are relative to
@@ -44,13 +44,13 @@
 # The configuration file may be divided into sections with option names like:
 # [ssl,default]
 #
-# Clauses after a section header will only be included if they match one of the tags in the 
+# Clauses after a section header will only be included if they match one of the tags in the
 # options property.  By default options are set to "default,*" or the OPTIONS property may
 # be used to pass in a list of tags, eg. :
 #
 #    java -jar start.jar OPTIONS=jetty,jsp,ssl
 #
-# The tag '*' is always appended to the options, so any section with the * tag is always 
+# The tag '*' is always appended to the options, so any section with the * tag is always
 # applied.
 #
 
@@ -77,7 +77,7 @@ OPTIONS~=default,*                               ! property OPTIONS
 # Add a resources directory if it is there
 [All,resources,default]
 $(jetty.home)/resources/
-           
+
 # Add jetty modules
 [*]
 $(jetty.lib)/jetty-util-$(version).jar                                             ! available org.eclipse.jetty.util.StringUtil
@@ -85,26 +85,26 @@ $(jetty.lib)/jetty-io-$(version).jar                                            
 
 [Server,All,xml,default]
 $(jetty.lib)/jetty-xml-$(version).jar                                              ! available org.eclipse.jetty.xml.XmlParser
-         
+
 [Server,All,server,default]
 $(jetty.lib)/servlet-api-3.0.jar                                                   ! available javax.servlet.ServletContext
 $(jetty.lib)/jetty-http-$(version).jar                                             ! available org.eclipse.jetty.http.HttpParser
 $(jetty.lib)/jetty-continuation-$(version).jar                                     ! available org.eclipse.jetty.continuation.Continuation
 $(jetty.lib)/jetty-server-$(version).jar                                           ! available org.eclipse.jetty.server.Server
-                                             
+
 [Server,All,security,default]
 $(jetty.lib)/jetty-security-$(version).jar                                         ! available org.eclipse.jetty.security.LoginService
-                                                       
+
 [Server,All,servlet,default]
 $(jetty.lib)/servlet-api-3.0.jar                                                   ! available javax.servlet.ServletContext
 $(jetty.lib)/jetty-servlet-$(version).jar                                          ! available org.eclipse.jetty.servlet.ServletHandler
-                            
+
 [Server,All,webapp,default]
 $(jetty.lib)/jetty-webapp-$(version).jar                                           ! available org.eclipse.jetty.webapp.WebAppContext
-                                  
+
 [Server,All,deploy,default]
 $(jetty.lib)/jetty-deploy-$(version).jar                                           ! available org.eclipse.jetty.deploy.ContextDeployer
-           
+
 [Server,All,servlets,default]
 $(jetty.lib)/jetty-servlets-$(version).jar                                         ! available org.eclipse.jetty.servlets.WelcomeFilter
 
@@ -113,50 +113,47 @@ $(jetty.lib)/jetty-rewrite-$(version).jar                                       
 
 [All,jmx]
 $(jetty.lib)/jetty-jmx-$(version).jar                                              ! available org.eclipse.jetty.jmx.MBeanContainer
-                  
+
 [All,ajp]
-$(jetty.lib)/jetty-ajp-$(version).jar                                              ! available org.eclipse.jetty.ajp.Ajp13Connection      
-                   
+$(jetty.lib)/jetty-ajp-$(version).jar                                              ! available org.eclipse.jetty.ajp.Ajp13Connection
+
 [All,plus,jndi]
 $(jetty.lib)/jetty-jndi-${version}.jar                                             ! available org.eclipse.jetty.jndi.ContextFactory
 $(jetty.lib)/jetty-plus-${version}.jar                                             ! available org.eclipse.jetty.plus.jndi.NamingEntry
-$(jetty.lib)/jndi/**                                                               exists $(jetty.lib)/jndi 
+$(jetty.lib)/jndi/**                                                               exists $(jetty.lib)/jndi
 
 [All,annotations]
-$(jetty.lib)/jetty-annotations-$(version).jar                                      ! available org.eclipse.jetty.annotations.AnnotationFinder
-$(jetty.lib)/annotations/**                                                        exists $(jetty.lib)/jndi 
-          
+$(jetty.lib)/jetty-annotations-$(version).jar                                      ! available org.eclipse.jetty.annotations.AnnotationParser
+$(jetty.lib)/annotations/**                                                        exists $(jetty.lib)/annotations
+
 [All,setuid]
 $(jetty.lib)/jetty-setuid-$(version).jar                                           ! available org.eclipse.jetty.setuid.SetUID
-$(jetty.lib)/setuid/**                                                       
-                                    
+$(jetty.lib)/setuid/**
+
 [All,policy]
 $(jetty.lib)/jetty-policy-$(version).jar                                           ! available org.eclipse.jetty.policy.JettyPolicy
-                                    
+
 [All,Client,client]
 $(jetty.lib)/jetty-http-$(version).jar                                             ! available org.eclipse.jetty.http.HttpParser
 $(jetty.lib)/jetty-client-$(version).jar                                           ! available org.eclipse.jetty.client.HttpClient
 
-[All,websocket]
-$(jetty.lib)/jetty-websocket-$(version).jar                                        ! available org.eclipse.jetty.websocket.WebSocket
-       
 [Client]
 $(jetty.lib)/jetty-http-$(version).jar                                             ! available org.eclipse.jetty.http.HttpParser
 
 [All,websocket]
 $(jetty.lib)/jetty-websocket-$(version).jar                                        ! available org.eclipse.jetty.websocket.WebSocket
-       
+
 [All,overlay,overlays]
 $(jetty.lib)/jetty-overlay-deployer-$(version).jar                                 ! available org.eclipse.jetty.overlay.OverlayedAppProvider
-       
-      
+
+
 # Add ext if it exists
-[Server,All,default,ext]        
+[Server,All,default,ext]
 $(jetty.lib)/ext/**
 
 # Add all other sub-directories in /lib/ as options in a dynamic way
-[All,=$(jetty.lib)/**]        
+[All,=$(jetty.lib)/**]
 
 # Set webapps dir
 jetty.webapps=/usr/share/java/webapps
-
+[All,=$(jetty.lib)/**]
